Changelog for WC Vendors Marketplace

Version 2.1.1

* Fixed: Invalid variable reference
* Fixed: Uninistall loading order to ensure table still exists when getting settings fields
* Fixed: Incorrect capabilities set on initial install and via setup wizard
* Fixed: Handle PayPal Adaptive Payments IPN status inconsistencies (#495)
* Fixed: Incorrect javascript method name
* Fixed: No terms and conditions warning (#494)
* Fixed: Replace vendor with function call (#493)
* Fixed: Update methods in the wrong location
* Fixed: Line item id's incorrectly set

Templates Updated:
	templates/dashboard/denied.php

Version 2.1.0

* Added Option to remove "Become a Vendor" tab on the my-account page
* Update: Make it easier to visually see which emails have been deprecated
* Fixed: Virtual / Downloadable Hide option does not work #483
* Fixed: Admin notify vendor application not firing #468
* Fixed: Username not showing in Admin notification email subject
* Fixed: Terms & conditions on wp-register page #479
* Fixed: Capabilities resetting disables edit live products #466
* Fixed: Vendor labels can't be translated #451
* Fixed: "Become a Vendor" tab is not hidden for vendor role #472
* Fixed: WooCommerce Product Enquiry emails not working #465
* Fixed: Color picker class not working when adding custom class (#469)
* Fixed: Stop vendor notification sending twice
* Fixed: Shipping cost to be added onto Vendor commissions #463
* Fixed: Using wrong method in classes/class-shipping.php #461

Version 2.0.10

* Fixed: Commission by Product report is not functioning & shows errors #456
* Fixed: Disable upgrade notice if pro already active
* Fixed: Added check in case user incorrectly sets orders page
* Fixed: Vendor emails not firing #450
* Fixed: Included translations no longer work #455
* Fixed: Parameter 2 to be array in class-admin-users.php on line 174 #454
* Fixed: my-account "become a vendor" tab is leading to a 404 #447